2003-06-12  Callum McKenzie  <callum@physics.otago.ac.nz>

	* gnomine.c:
	* gnomine.schemas.in: Fix up Stephen's patch since we don't use
	question marks anymore. Also default to disabled since I have
	never, ever, seen anyone use them.

2003-06-12  Stephen Depooter  <sbdep@woot.net>

	* minefield.h:
	* minefield.c:
	* gnomine.schemas.in
	* gnomine.c: Added preference to use question marks or not.  The
	default is to have them enabled.
 
2003-06-11  Callum McKenzie  <callum@physics.otago.ac.nz>

	* gnomine.c : i18n fixes from Christian Neumair (bug #114875).

2003-06-10  William Jon McCann  <mccann@jhu.edu>

	* gnomine.c: HIG fixes for preferences dialog.  Moved
	flags status and clock to appbar.

2003-06-09  William Jon McCann  <mccann@jhu.edu>

	* gnomine.c: Removed separator from dialogs as in HIG.

2003-06-05  William Jon McCann  <mccann@jhu.edu>

	* Makefile.am (install-data-local): Only install schemas
	if they are requested.

2003-05-31  Callum McKenzie  <callum@physics.otago.ac.nz>

	* Makefile.am (install-data-local): Implement setgid modifications
	(see gnome-games/ChangeLog). Also undo the score directory
	changes. It breaks more than it fixes.	

2003-05-30  Callum McKenzie  <callum@physics.otago.ac.nz>

	* Makefile.am (scoredir): Changed score directory to fix bug
	#113968.

2003-05-28  Callum McKenzie  <callum@physics.otago.ac.nz>

	* gnomine.c: Use gtk_window_present for displaying dialogs.
	Fixes bug #113893, thanks to Steve Chaplin.

2003-05-21  Callum McKenzie  <callum@physics.otago.ac.nz>

	* gnomine.c (preferences_callback): Fixed code to make 
	translation easier, fixes bug #113395.

2003-05-18  Callum McKenzie  <callum@physics.otago.ac.nz>

	* Makefile.am (EXTRA_DIST): Fixups so make distcheck works.

2003-05-14  Callum McKenzie  <callum@physics.otago.ac.nz>

	* Makefile.am: Moved the icon into here from the gnome-desktop
	module.

2003-05-12  Callum McKenzie  <callum@physics.otago.ac.nz>
